# verified-science-agent

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE_STATUS.md  ci_workflow_example.txt  pyproject.toml
.github/workflows/: ci.yml  live-connectors.yml  release.yml
benchmarks/: run_benchmark.py  tasks.json
benchmarks/fixtures/: adversarial_alphafold_experimental_report.json  adversarial_clinical_approved_report.json  adversarial_missing_path_report.json  adversarial_unsupported_report.json  alphafold_only_evidence.json  brca1_variant_evidence.json  conflicting_clinical_evidence.json  egfr_target_evidence.json  fake_evidence_report.json  gene_ambiguous_uniprot_evidence.json  materials_candidate_evidence.json  metadata_only_paper_2_evidence.json  metadata_only_paper_3_evidence.json  metadata_only_paper_4_evidence.json  metadata_only_paper_5_evidence.json  metadata_only_paper_evidence.json  paper_doi_evidence.json  protein_structure_evidence.json  stale_source_evidence.json  tp53_variant_evidence.json
demo/: three_slide_narrative.md
docs/: README.md  api.md  architecture.md  benchmark.md  connectors.md  release_checklist.md  schema.md
examples/: bad_missing_evidence_ref.json  bad_unsupported_claim.json  brca1_c68_69del_ledger.json  brca1_input.json  egfr_input.json  invalid_ledger_missing_source.json  materials_input.json  paper_doi_input.json  paper_input.json  paper_report.json  protein_accession_input.json  protein_input.json  protein_report.json  tp53_input.json  tp53_report.json
integrations/: example_adapter.py
prompts/: verifier_prompt.md
reports/: .gitkeep  attestation.json  audit.json  brca1_report.json  brca1_report.md  materials_report.json  paper_report.json  protein_report.json  tp53_report.json
schemas/: scientific_report.schema.json
scripts/: acceptance.sh  provenance_hash.py  render_report.py  validate_ledger.py
src/vsa/: __init__.py  cli.py  compare.py  compare_audit.py  config.py  http_client.py  inspect.py  safety.py  schema.py  telemetry.py  utils.py  version.py
src/vsa/api/: __init__.py  app.py  middleware.py  schemas.py
src/vsa/artifacts/: __init__.py  export.py  verify.py
src/vsa/benchmark/: __init__.py  runner.py
src/vsa/claims/: __init__.py  extraction.py  llm_extraction.py
src/vsa/connectors/: __init__.py  alphafold.py  base.py  cache.py  clinvar.py  content_level.py  crossref.py  dedup.py  materials_project.py  ncbi_pubmed.py  openalex.py  pubmed.py  semantic_scholar.py  (+1 more)
templates/: claim_ledger_template.json
tests/: conftest.py  test_api.py  test_api_auth.py  test_attestation.py  test_benchmarks.py  test_cli.py  test_compare_audit.py  test_connectors.py  test_content_level.py  test_credibility.py  test_e2e_pipeline.py  test_export.py  test_hash.py  test_llm.py  test_llm_verifier.py  test_materials_pipeline.py  test_materials_project.py  test_paper_claims.py  test_pipeline.py  test_pubmed.py  test_render.py  test_retrieval.py  test_review.py  test_review_cli.py  test_schema.py  test_schema_migration.py  test_signing_audit.py  test_subject_parser.py  test_validate.py  test_verify_bundle.py
tests/connectors/: test_alphafold.py  test_clinvar.py  test_crossref.py  test_europe_pmc.py  test_live.py  test_openalex.py  test_semantic_scholar.py  test_uniprot.py
ui/: app.py
(+32 files in other folders)
