[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verified-science-agent"
version = "0.3.1"
description = "Evidence-backed scientific AI report infrastructure with validation, provenance, and reproducibility."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Verified Science Agent Contributors" }]
keywords = ["science", "evidence", "validation", "provenance", "genomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jsonschema>=4.21.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "certifi>=2024.0.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.32.0"]
pdf = ["fpdf2>=2.7.0"]
signing = ["cryptography>=42.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[project.scripts]
vsa = "vsa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vsa = ["schemas/*.json", "prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
